fixed mis-aligned footer license in Angua

--- a/css/layout.css
+++ b/css/layout.css
@@ -272,6 +272,13 @@ div.footerinc {
     margin-top: 1em;
 }
 
+div.footerinc div.license {
+    display: inline;
+}
+div.footerinc div.license img.medialeft {
+    float: none;
+}
+
 .footerinc a img {
     opacity: 0.5;
     border: 0;
